@startuml

interface PlayingCard{
    Integer: index()
}

class SuitCard{
    Integer: index()
    Color: color()
    face()
}

enum Face {
    String: displayName()
}

enum Color {
    String: symbol()
}

class TrumCard {
    Integer: index()
}


PlayingCard --> SuitCard
PlayingCard --> TrumCard
SuitCard --> Color
SuitCard --> Face
@enduml
